name:               learn-lens
version:            0.0.1
license:            BSD3
license-file:       etc/LICENCE.md
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2014
synopsis:           Learn Yourself a Lens
category:           Data
description:        Learn Yourself a Lens
homepage:           https://bitbucket.org/domdere/learn-lens/issues
bug-reports:        https://bitbucket.org/domdere/learn-lens/issues
cabal-version:      >= 1.18
build-type:         Custom
--extra-source-files: etc/CONTRIBUTORS,
--                    etc/CREDITS

source-repository       head
    type:               git
    location:           https://bitbucket.org/domdere/learn-lens

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:      base < 5 && >= 4
                    ,   containers
                    ,   array
                    ,   mtl                 == 2.1.*
                    ,   transformers        == 0.3.*

    ghc-options:        -Wall
                        -fno-warn-unused-imports
                        -fno-warn-unused-binds
                        -fno-warn-unused-do-bind
                        -fno-warn-type-defaults

    hs-source-dirs:     src

    exposed-modules:    Data.Choice
                    ,   Data.Contravariant
                    ,   Data.Functor.Const
                    ,   Control.Lens.Core
                    ,   Control.Lens.Getter
                    ,   Control.Lens.Motivation
                    ,   Control.Lens.Prism1
                    ,   Control.Lens.Tuple

    other-modules:      LensPrelude

    default-extensions: KindSignatures
                    ,   NoImplicitPrelude
                    ,   RankNTypes

test-suite              doctests
    type:
                        exitcode-stdio-1.0

    main-is:
                        Main.hs

    default-language:
                        Haskell2010

    build-depends:      base < 5 && >= 3
                    ,   doctest             == 0.9.*
                    ,   filepath            == 1.3.*
                    ,   directory           == 1.2.*
                    ,   QuickCheck          == 2.7.*

    ghc-options:
                        -Wall
                        -threaded

    hs-source-dirs:
                        doctests

test-suite              hlint
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     hlint
    build-depends:      base
                    ,   hlint               == 1.8.*

benchmark               benchmarks
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    hs-source-dirs:     benchmarks
    main-is:            Main.hs
    ghc-options:        -O2 -rtsopts

    build-depends:      base > 4 && <= 5
                    ,   learn-lens
                    ,   criterion >= 0.8
